frontend/test/should_fail/array_map_input_scalar.grg
test array_map(ref a:array<double>) {
	if {
		a.map<int>{value:int -> value}.empty();
	}	
}

